--- a/museum/css/style.css
+++ b/museum/css/style.css
@@ -51,6 +51,7 @@ body {
 }
 *[class$='_bg-dark'] {
   background-color: var(--bg-dark);
+  color: #fff;
 }
 .title {
   margin: 0;
@@ -74,6 +75,10 @@ body {
   font-size: var(--font3);
   font-weight: 300;
   letter-spacing: 2px;
+}
+.text {
+  font-size: var(--font4);
+  font-weight: 300;
 }
 .card__title {
   font-family: 'Forum', cursive;
@@ -281,6 +286,7 @@ body {
 /* ----------------
       Visiting
   ----------------- */
+
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -304,4 +310,83 @@ body {
 }
 .card__img {
   margin-bottom: 25px;
+}
+
+/* ----------------
+      Explore
+  ----------------- */
+.explore__container {
+  display: flex;
+}
+.explore__text {
+  margin-bottom: 25px;
+  line-height: 38.5px;
+}
+
+.explore__text_yellow {
+  color: #caaa7d;
+}
+.explore__description {
+  max-width: 660px;
+  margin-right: 60px;
+}
+.compare {
+  width: 50%;
+  display: block;
+  margin: 30px auto;
+  margin-top: 15px;
+  width: 720px;
+  height: 700px;
+}
+
+.compare__img {
+  width: 100%;
+  display: block;
+}
+
+.compare__slider {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  border: 3px solid white;
+}
+
+.compare__after-image {
+  display: block;
+}
+
+.compare__before-image {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.resizer {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  z-index: 5;
+  top: 0;
+  left: 50%;
+  height: 100%;
+  width: 4px;
+  background: white;
+  /*Stop vertical scrolling on touch*/
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+}
+
+.resizer:after {
+  content: '';
+  color: white;
+  position: absolute;
+  margin: 0 0 0 -15px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 4px solid white;
 }
