--- a/museum/css/style.css
+++ b/museum/css/style.css
@@ -15,7 +15,9 @@
   --font5: 18px;
 }
 
-* {
+*,
+*:before,
+*:after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -43,6 +45,9 @@ body {
 *[class$='_gold'] {
   color: var(--font-gold);
 }
+*[class$='_red'] {
+  color: var(--dark-red);
+}
 *[class$='_light'] {
   color: #fff;
 }
@@ -52,6 +57,18 @@ body {
 *[class$='_bg-dark'] {
   background-color: var(--bg-dark);
   color: #fff;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .title {
   margin: 0;
@@ -64,12 +81,6 @@ body {
 }
 .title.underline {
   margin-bottom: 103px;
-}
-.title_gold {
-  color: var(--font-gold);
-}
-.title_light {
-  color: #ffffff;
 }
 .subtitle {
   font-size: var(--font3);
@@ -90,7 +101,15 @@ body {
 .card__title.underline {
   margin-bottom: 22px;
 }
-.link {
+.card__title.underline::after {
+  width: 68%;
+  transition: width 0.5s ease;
+}
+.card:hover .card__title.underline:after {
+  width: 100%;
+}
+.link,
+.date {
   font-family: 'Roboto', sans-serif;
   font-size: var(--font4);
   font-weight: 200;
@@ -100,7 +119,9 @@ body {
   text-decoration: none;
   transition: color 0.5s ease;
 }
-.link:hover {
+.link:hover,
+.information__link:hover,
+.socials__button:hover {
   color: var(--font-gold);
 }
 .link_active {
@@ -115,12 +136,48 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -25px;
+  bottom: -28px;
   height: 3px;
   background-color: var(--dark-red);
 }
 .underline.card__title::after {
-  bottom: -10px;
+  height: 2px;
+  bottom: -12px;
+}
+
+/* ----------------
+      Ripple
+  ----------------- */
+
+.ripple {
+  position: relative;
+}
+
+.ripple::active,
+.ripple::visited,
+.ripple:focus {
+  outline: 0;
+  border: 0;
+}
+
+.ripple__span {
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.5);
+  transform: scale(0);
+  position: absolute;
+  opacity: 1;
+}
+.rippleAnimation {
+  animation: ripple 0.6s linear;
+}
+
+@keyframes ripple {
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
 }
 
 /* ----------------
@@ -129,7 +186,7 @@ body {
 
 .header {
   background-color: var(--bg-dark);
-  padding: 50px 0;
+  padding: 59px 0 58px;
 }
 .header__container {
   display: flex;
@@ -138,24 +195,26 @@ body {
   padding: 0;
 }
 .logo {
-  height: 30px;
-  width: 190px;
+  height: 33px;
+  width: 199px;
   background-image: url('../assets/svg/logo.svg');
   background-repeat: no-repeat;
+}
+.modal__logo {
+  height: 41px;
+  width: 85px;
+  background-image: url('../assets/svg/gold-logo.svg');
 }
 .nav {
   max-width: 775px;
   width: 100%;
-  line-height: 50px;
+  line-height: 26px;
 }
 .nav__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
   list-style: none;
-}
-.nav__item:not(:last-child) {
-  padding-right: 10px;
 }
 
 /* ----------------
@@ -193,10 +252,17 @@ body {
   background-color: var(--font-gold);
 }
 .booking__title {
+  font-weight: 700;
   font-size: var(--font3);
   font-weight: bold;
 }
-
+.booking__total {
+  letter-spacing: 1.65px;
+  margin-top: 43px;
+}
+.booking__submit {
+  margin-top: 37px;
+}
 /* ----------------
       Slider
   ----------------- */
@@ -278,6 +344,11 @@ body {
 .slider__num {
   padding: 0 10px;
 }
+
+.slider__button {
+  background-color: transparent;
+  border: 0;
+}
 .slider__prev {
   margin-right: 10px;
   cursor: pointer;
@@ -325,7 +396,7 @@ body {
 }
 .explore__text {
   margin-bottom: 25px;
-  line-height: 38.5px;
+  line-height: 39px;
 }
 
 .explore__text_yellow {
@@ -355,7 +426,6 @@ body {
   width: 100%;
   position: relative;
   overflow: hidden;
-  border: 3px solid white;
 }
 
 .compare__after-image {
@@ -391,9 +461,9 @@ body {
   content: '';
   color: white;
   position: absolute;
-  margin: 0 0 0 -15px;
-  width: 25px;
-  height: 25px;
+  margin: 0 0 0 -17px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
   border: 4px solid white;
 }
@@ -501,6 +571,9 @@ body {
 .video__slider {
   margin-top: 40px;
 }
+.splide__slide > iframe {
+  border: 0;
+}
 
 /* ----------------
       Gallery
@@ -532,8 +605,13 @@ body {
 }
 
 .picture__item {
+  width: 456px;
   break-inside: avoid;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
+}
+.picture__item:nth-child(1),
+.picture__item:nth-child(11) {
+  margin-top: 50px;
 }
 
 /* ----------------
@@ -568,15 +646,16 @@ body {
   --------------------- */
 
 .booking__radio-label {
-  display: block;
   position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  margin: 25px 0;
+  padding-left: 40px;
+  line-height: 27px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: var(--font4);
+  font-weight: 300;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 .booking__radio {
@@ -586,7 +665,6 @@ body {
 }
 .booking__checkmark {
   position: absolute;
-  top: 0;
   left: 0;
   height: 17px;
   width: 17px;
@@ -621,16 +699,12 @@ body {
   font-size: var(--font4);
   font-weight: 300;
 }
-.booking__type .booking__title {
-  margin-bottom: 50px;
+.booking__title {
+  margin-bottom: 25px;
 }
 .booking__amount .booking__title {
   text-align: right;
 }
-.booking__radio-label {
-  margin-bottom: 25px;
-}
-
 
 /* ---------------------
   Tickets number input
@@ -643,6 +717,7 @@ body {
   height: 50px;
   width: 150px;
   padding: 6px 14px;
+  margin: 15px 0 10px;
   font-size: var(--font4);
   font-weight: 300;
   border: 3px #000 solid;
@@ -666,13 +741,16 @@ body {
   letter-spacing: 2px;
   color: #fff;
   background-color: #000;
+  border: 0;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 /* ----------------
       Parallax
   ---------------- */
 
-.tickets__parallax{
+.tickets__parallax {
   width: 100%;
   height: 400px;
   background-image: url(../assets/img/parallax.jpg);
@@ -683,3 +761,234 @@ body {
 /* ----------------
       Contacts
   ---------------- */
+
+.contacts__inner {
+  display: flex;
+  justify-content: space-between;
+  color: #000;
+}
+.contacts__title {
+  margin-bottom: 50px;
+  max-width: 227px;
+  font-size: var(--font3);
+  font-weight: 500;
+  line-height: 33px;
+}
+.information__item {
+  margin-bottom: 25px;
+  line-height: 26px;
+}
+
+.information {
+  list-style: none;
+  font-size: var(--font4);
+  font-weight: 300;
+}
+.information__link {
+  font-family: 'Roboto', sans-serif;
+  font-size: var(--font4);
+  font-weight: 300;
+  letter-spacing: 2px;
+  line-height: 26px;
+  color: #000;
+  text-decoration: none;
+  transition: color 0.5s ease;
+}
+/* ----------------
+      Footer
+  ---------------- */
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 80px;
+  padding-bottom: 40px;
+}
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 50px;
+}
+.footer .logo {
+  margin-top: 5px;
+}
+.footer__nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 703px;
+}
+.footer .nav__inner {
+  display: block;
+  column-count: 2;
+  column-gap: 160px;
+}
+.footer__socials {
+  display: flex;
+  align-items: end;
+  margin-right: -10px;
+}
+.socials__button {
+  list-style-type: none;
+}
+.socials__link {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px;
+}
+.socials__link path {
+  transition: all 0.5s ease;
+}
+.socials__link:hover path {
+  fill: var(--font-gold);
+}
+.socials__link::before {
+  position: absolute;
+  top: -50%;
+  right: -50%;
+  content: '';
+  padding: 24px;
+  border-radius: 50%;
+  border: 1px #fff solid;
+  transition: all 0.5s ease;
+}
+.socials__link:hover::before {
+  border: 1px var(--font-gold) solid;
+}
+
+/* ----------------
+      Modal
+  ---------------- */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal__content {
+  position: relative;
+  width: 100%;
+  padding: 91px;
+  background-color: #fff;
+  border-radius: 4px;
+  overflow-y: auto;
+}
+.modal__close {
+  position: absolute;
+  top: 8px;
+  right: 14px;
+  font-size: 30px;
+  color: #000;
+  opacity: 0.5;
+  font-weight: 700;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.modal__form {
+  display: flex;
+  justify-content: space-between;
+}
+.modal__booking,
+.modal__overview {
+  padding: 0;
+  border: 0;
+}
+.modal__booking {
+  max-width: 400px;
+}
+.modal__title {
+  font-size: 50px;
+  letter-spacing: 0;
+}
+.modal__subtitle {
+  font-size: var(--font5);
+  font-weight: 400;
+}
+.modal__subtitle.underline:after {
+  bottom: -13px;
+}
+.modal__inputs {
+  margin-top: 73px;
+}
+.data {
+  padding: 15px 10px;
+  border: 1px var(--bg-dark) solid;
+}
+.data .modal__subtitle {
+  margin-bottom: 25px;
+  font-family: 'Forum', cursive;
+}
+.data .modal__subtitle.underline:after {
+  bottom: -8px;
+}
+.data__label {
+  font-size: var(--font5);
+}
+.date__inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.data__number-input {
+  display: inline-flex;
+  width: 105px;
+  height: 25px;
+  padding: 0;
+  margin-left: 93px;
+  border-width: 1px;
+  font-weight: 400;
+}
+
+.data .number-input__plus,
+.data .number-input__minus {
+  width: 35px;
+  font-size: var(---font4);
+  color: #fff;
+  background-color: var(--bg-dark);
+}
+.show {
+  display: block;
+}
+.hide {
+  display: none;
+}
+.fadeIn {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+}
+@keyframes fadeIn {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+.fadeOut {
+  animation-name: fadeOut;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+@keyframes fadeOut {
+  from {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
