--- a/museum/css/style.css
+++ b/museum/css/style.css
@@ -95,7 +95,7 @@ body {
   font-family: 'Forum', cursive;
   font-size: var(--font2);
   letter-spacing: 5px;
-  line-height: 30px;
+  line-height: 35px;
   text-transform: uppercase;
 }
 .card__title.underline {
@@ -144,7 +144,9 @@ body {
   height: 2px;
   bottom: -12px;
 }
-
+button {
+  cursor: pointer;
+}
 /* ----------------
       Ripple
   ----------------- */
@@ -248,7 +250,11 @@ body {
   border-radius: 10px;
   transition: background-color 0.5s ease;
 }
-.welcome__btn:hover {
+.booking__submit {
+  transition: background-color 0.5s ease;
+}
+.welcome__btn:hover,
+.booking__submit:hover {
   background-color: var(--font-gold);
 }
 .booking__title {
@@ -333,7 +339,8 @@ body {
   width: 16px;
   background-color: #fff;
   cursor: pointer;
-  transition: opacity 0.6s ease;
+  opacity: 1;
+  transition: all 0.4s ease;
 }
 .slider__carousel-dot:not(:last-child) {
   margin-right: 25px;
@@ -351,11 +358,19 @@ body {
 }
 .slider__prev {
   margin-right: 10px;
-  cursor: pointer;
+  transition: all 0.4s ease;
 }
 .slider__next {
   margin-left: 10px;
-  cursor: pointer;
+  transition: all 0.4s ease;
+}
+.slider__carousel-dot:hover {
+  opacity: 0.7;
+}
+
+.slider__next:hover path,
+.slider__prev:hover path {
+  fill: var(--font-gold);
 }
 
 /* ----------------
@@ -365,7 +380,7 @@ body {
 .cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 78px 60px;
+  gap: 76px 60px;
   max-width: 1440px;
 }
 .card {
@@ -384,7 +399,7 @@ body {
   font-weight: 200;
 }
 .card__img {
-  margin-bottom: 25px;
+  margin-bottom: 22.5px;
 }
 
 /* ----------------
@@ -409,7 +424,6 @@ body {
 .compare {
   width: 50%;
   display: block;
-  margin: 30px auto;
   margin-top: 15px;
   width: 720px;
   height: 700px;
@@ -417,7 +431,6 @@ body {
 
 .compare__img {
   display: block;
-  width: 100%;
   pointer-events: none;
   user-select: none;
 }
@@ -435,7 +448,7 @@ body {
 .compare__before-image {
   position: absolute;
   height: 100%;
-  width: 50%;
+  width: 61%;
   top: 0;
   left: 0;
   overflow: hidden;
@@ -448,11 +461,11 @@ body {
   align-items: center;
   z-index: 5;
   top: 0;
-  left: 50%;
+  left: 61%;
   height: 100%;
   width: 4px;
   background: white;
-  /*Stop vertical scrolling on touch*/
+  cursor: e-resize;
   -ms-touch-action: pan-y;
   touch-action: pan-y;
 }
@@ -498,12 +511,15 @@ body {
   position: relative;
 }
 
+.player__wrapper:hover {
+  opacity: 0.7;
+}
 .player__wrapper-before {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 90%;
   background-image: url('../assets/svg/play-big.svg');
   background-repeat: no-repeat;
   background-position: center center;
@@ -519,8 +535,12 @@ body {
   width: 38px;
   object-fit: cover;
 }
+.player__play-button:hover,
+.player__volume-button:hover,
+.player__expand-button:hover {
+  opacity: 0.7;
+}
 .player__range-time {
-  /* padding-left: -5px; */
   width: 70%;
   max-width: 929px;
   height: 8px;
@@ -626,6 +646,8 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  font-size: var(--font5);
+  font-weight: 400;
 }
 .booking__amount,
 .booking__type {
@@ -733,6 +755,11 @@ body {
   font-weight: 400;
   border: 0;
   background-color: #fff;
+  transition: opacity 0.2s ease;
+}
+.number-input__plus:hover,
+.number-input__minus:hover {
+  opacity: 0.5;
 }
 .booking__submit {
   padding: 12px 38px;
@@ -788,7 +815,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: var(--font4);
   font-weight: 300;
-  letter-spacing: 2px;
+  letter-spacing: 0;
   line-height: 26px;
   color: #000;
   text-decoration: none;
@@ -802,7 +829,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding-top: 80px;
-  padding-bottom: 40px;
+  padding-bottom: 35px;
 }
 .footer-bottom {
   display: flex;
@@ -819,14 +846,22 @@ body {
   max-width: 703px;
 }
 .footer .nav__inner {
-  display: block;
-  column-count: 2;
-  column-gap: 160px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: start;
+  width: 363px;
+  height: 150px;
+  line-height: 50px;
+}
+.footer .nav__item {
+  margin-right: 170px;
 }
 .footer__socials {
   display: flex;
   align-items: end;
   margin-right: -10px;
+  margin-bottom: 10px;
 }
 .socials__button {
   list-style-type: none;
@@ -873,6 +908,9 @@ body {
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
 }
+.modal__container {
+  padding-top: 15px;
+}
 .modal__content {
   position: relative;
   width: 100%;
@@ -883,31 +921,35 @@ body {
 }
 .modal__close {
   position: absolute;
-  top: 8px;
-  right: 14px;
-  font-size: 30px;
+  top: -8px;
+  right: 24px;
+  font-size: 70px;
   color: #000;
   opacity: 0.5;
-  font-weight: 700;
+  font-weight: 100;
   border: none;
   background-color: transparent;
   cursor: pointer;
 }
 .modal__form {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  margin: 0 auto;
 }
 .modal__booking,
 .modal__overview {
   padding: 0;
+  width: 400px;
   border: 0;
 }
 .modal__booking {
-  max-width: 400px;
+  margin-right: 41px;
 }
 .modal__title {
+  margin-bottom: 13px;
   font-size: 50px;
   letter-spacing: 0;
+  line-height: 55px;
 }
 .modal__subtitle {
   font-size: var(--font5);
@@ -916,21 +958,118 @@ body {
 .modal__subtitle.underline:after {
   bottom: -13px;
 }
-.modal__inputs {
-  margin-top: 73px;
+.modal__when {
+  display: flex;
+  justify-content: space-between;
 }
+.modal__inputs {
+  display: flex;
+  flex-direction: column;
+  margin-top: 64px;
+}
+.modal__input {
+  height: 45px;
+  margin: 10px 0;
+  padding: 0 8px 0 44px;
+  font-size: var(--font5);
+  font-weight: 400;
+  border-radius: 0;
+  border: 1px var(--bg-dark) solid;
+  background-repeat: no-repeat;
+  background-position: 15px 50%;
+}
+.modal__date,
+.modal__time {
+  width: 190px;
+}
+
+.modal__date::-webkit-calendar-picker-indicator {
+  background-image: url('../assets/svg/form/arrow.svg');
+  background-size: 17px;
+}
+.modal__date::-webkit-datetime-edit {
+  opacity: 0;
+}
+.modal__date::before {
+  content: 'Date';
+  font-size: var(--font5);
+  font-weight: 400;
+}
+.modal__date {
+  background-image: url('../assets/svg/form/date.svg');
+}
+.modal__time::-webkit-calendar-picker-indicator {
+  background-image: url('../assets/svg/form/arrow.svg');
+  background-size: 17px;
+}
+.modal__time::-webkit-datetime-edit {
+  opacity: 0;
+}
+.modal__time::before {
+  content: 'Time';
+  font-size: var(--font5);
+  font-weight: 400;
+}
+.modal__time {
+  background-image: url('../assets/svg/form/time.svg');
+}
+.modal__name,
+.modal__email {
+  width: 100%;
+}
+.modal__name-input,
+.modal__email-input {
+  position: relative;
+}
+.modal__name-icon {
+  position: absolute;
+  left: 15px;
+  top: 26px;
+  width: 13px;
+  height: 15px;
+  margin: auto;
+  background-image: url('../assets/svg/form/name.svg');
+}
+.modal__email-icon {
+  position: absolute;
+  left: 15px;
+  top: 26px;
+  width: 15px;
+  height: 11px;
+  margin: auto;
+  background-image: url('../assets/svg/form/email.svg');
+}
+
+.modal__phone {
+  background-image: url('../assets/svg/form/tel.svg');
+}
+.modal__select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background: url('../assets/svg/form/arrow.svg') right 14px center no-repeat,
+    url('../assets/svg/form/ballot.svg') left 15px center no-repeat;
+}
+.modal__select::-webkit-expand {
+  background-image: url('../assets/svg/form/arrow.svg');
+}
+
 .data {
-  padding: 15px 10px;
+  margin-top: 10px;
+  padding: 10px 12px 10px 15px;
   border: 1px var(--bg-dark) solid;
 }
 .data .modal__subtitle {
-  margin-bottom: 25px;
+  margin-bottom: 5px;
+  line-height: 20px;
   font-family: 'Forum', cursive;
 }
 .data .modal__subtitle.underline:after {
   bottom: -8px;
 }
 .data__label {
+  padding-top: 8px;
   font-size: var(--font5);
 }
 .date__inner {
@@ -952,10 +1091,202 @@ body {
 .data .number-input__plus,
 .data .number-input__minus {
   width: 35px;
-  font-size: var(---font4);
+  font-size: var(---font3);
   color: #fff;
   background-color: var(--bg-dark);
 }
+.data__number-input:last-child {
+  margin: 8px 0 5px;
+}
+.data .number-input__input {
+  width: 35px;
+  font-size: var(--font5);
+}
+
+.modal__overview {
+  position: relative;
+  padding: 25px 30px;
+  border: 1px solid var(--bg-dark);
+}
+.overview__title {
+  font-size: var(--font2);
+  font-weight: 500;
+  line-height: 39px;
+}
+.overview__subtitle {
+  margin-bottom: 13px;
+  font-size: var(--font4);
+  font-weight: 500;
+  opacity: 0.9;
+}
+.overview__img {
+  position: absolute;
+  top: 25px;
+  right: 30px;
+}
+.overview__icon {
+  margin-right: 10px;
+}
+.overview__info-item {
+  height: 21px;
+  margin-bottom: 5px;
+}
+.overview__info-item > * {
+  font-size: var(--font5);
+  font-weight: 300;
+  border: 0;
+}
+.overview__number-item {
+  display: flex;
+  justify-content: space-between;
+  height: 30px;
+}
+.overview__number {
+  margin-top: 22px;
+  font-size: var(--font4);
+  font-weight: 400;
+}
+.tickets-number {
+  margin-right: 10px;
+  width: 32px;
+  height: 20px;
+  font-size: var(--font5);
+  color: #a4a4a3;
+  text-align: center;
+  background-color: var(--bg-dark);
+  border: 0;
+  border-radius: 5px;
+}
+.tickets-cost {
+  width: 50px;
+  text-align: right;
+  background-color: transparent;
+  border: 0;
+}
+.overview__total {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 17px;
+  margin-bottom: 10px;
+  font-size: var(--font2);
+  font-weight: 400;
+  line-height: 38px;
+}
+.overview__total-sum {
+  width: 80px;
+  font-weight: 500;
+  text-align: right;
+  border: 0;
+}
+.overline.underline::after {
+  bottom: 48px;
+}
+.credits__face,
+.credits__back {
+  position: relative;
+  padding: 15px 20px;
+  width: 360px;
+  height: 211px;
+  border-radius: 3px;
+}
+
+.input-number_arrow_false::-webkit-inner-spin-button,
+.input-number_arrow_false::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.input-number::-webkit-inner-spin-button,
+.input-number::-webkit-outer-spin-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 28px;
+  margin: 0;
+  -webkit-appearance: none;
+  background: #fff url('../assets/svg/form/number_arrow.svg') no-repeat center center;
+  border-left: 0.5px solid #a4a4a3;
+  opacity: 1;
+}
+
+.credits__face {
+  background-color: #bcbcbc;
+  z-index: 1060;
+}
+.credits__acceptable {
+  position: absolute;
+  top: 34px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.credits__type {
+  margin-bottom: 15px;
+}
+
+.credits__input {
+  padding: 10px;
+  margin-bottom: 10px;
+  height: 35px;
+  font-size: 12px;
+  font-weight: 400;
+  border: 0;
+}
+.credits__card-number {
+  width: 215px;
+}
+.credits__date-input {
+  width: 100px;
+  margin-right: 10px;
+}
+.credits__cardholder {
+  width: 320px;
+}
+.credits__label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+}
+
+.credits__back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -181px;
+  margin-left: 110px;
+  padding: 85px 20px 15px 265px;
+  background-color: #939393;
+}
+.credits__back::after {
+  position: absolute;
+  top: 25px;
+  left: 0;
+  content: '';
+  height: 45px;
+  width: 360px;
+  background-color: #161615;
+}
+.credits__cvc {
+  width: 75px;
+}
+.credits__instruction {
+  max-width: 55px;
+  font-size: 10px;
+  font-weight: 400;
+}
+.overview__btn {
+  margin: 25px 0 0 250px;
+  padding: 11px 85px;
+  font-size: var(--font4);
+  font-weight: 400;
+  color: #fff;
+  background-color: var(--dark-red);
+  border: 0;
+}
+
 .show {
   display: block;
 }
