--- a/museum/css/style.css
+++ b/museum/css/style.css
@@ -1,6 +1,3 @@
-/**
-*@prettier
-*/
 /* ----------------
        General
   ----------------- */
@@ -14,7 +11,6 @@
   --font4: 22px;
   --font5: 18px;
 }
-
 *,
 *:before,
 *:after {
@@ -463,8 +459,6 @@ button {
   top: 0;
   left: 61%;
   height: 100%;
-  width: 4px;
-  background: white;
   cursor: e-resize;
   -ms-touch-action: pan-y;
   touch-action: pan-y;
@@ -472,13 +466,11 @@ button {
 
 .resizer:after {
   content: '';
-  color: white;
   position: absolute;
-  margin: 0 0 0 -17px;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  border: 4px solid white;
+  margin-left: -20px;
+  background-image: url('../assets/img/explore-slider/resizer.svg');
+  height: 100%;
+  width: 40px;
 }
 
 /* ----------------
@@ -521,8 +513,10 @@ button {
   width: 100%;
   height: 90%;
   background-image: url('../assets/svg/play-big.svg');
+  background-color: transparent;
+  border: 0;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center 57%;
   z-index: 1000;
 }
 
@@ -591,8 +585,51 @@ button {
 .video__slider {
   margin-top: 40px;
 }
-.splide__slide > iframe {
+.vslider__videos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.vslider__videos > iframe {
   border: 0;
+}
+.vslider__control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+.vslider__prev,
+.vslider__next {
+  width: 10px;
+  height: 12px;
+  background-color: transparent;
+  border: 0;
+}
+.vslider__dots {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20px;
+}
+.vslider__dot {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background-color: #999;
+}
+.vslider__dot:not(:last-child) {
+  margin-right: 20px;
+}
+
+.vslider__dot.active {
+  background-color: #333;
+}
+.vslider__dot:hover {
+  background-color: var(--dark-red);
+}
+.vslider__prev:hover path,
+.vslider__next:hover path {
+  fill: var(--dark-red);
 }
 
 /* ----------------
@@ -605,7 +642,7 @@ button {
 
 .picture {
   position: relative;
-  height: 1960px;
+  height: 1885px;
   overflow-y: hidden;
 }
 .picture::after {
