--- a/museum-adaptive/css/style.css
+++ b/museum-adaptive/css/style.css
@@ -337,7 +337,7 @@ button {
 .a-nav__item {
   margin-bottom: 22px;
 }
-.a-nav__socials{
+.a-nav__socials {
   display: flex;
   justify-content: center;
   margin-top: 15px;
@@ -503,6 +503,7 @@ button {
 .slider__slide img {
   width: 100%;
   height: 100%;
+  user-select: none;
   object-fit: cover;
 }
 .slider__counter {
